# chibicc_with_history

./: .gitignore  CMakeLists.txt  README_cn.md  history.md
history/001/: main.c
history/002/: main.c
history/003/: main.c
history/102/: .gitignore
history/190/: CMakeLists.txt
history/288/: CMakeSettings.json
python_tools/: cp_cmakelist.py  cp_gitignore.py
